@@ -70,7 +70,7 @@ and `info' would really be `\fBdiskstats\fR_info', etc.
 The same \fBnamed_interface\fR is used in each header file name with
 an appended `.h' suffix.
 
-Link with \fI\-lprocps\fP.
+Link with \fI\-lproc-2\fP.
 
 .SH DESCRIPTION
 .SS Overview
